--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -64,7 +64,7 @@
         <input type="text" id="map-address-fake" onkeypress="removerEnter(event)" required="true" disabled="disabled" />
         </div>
 
-        <label><input type="checkbox" id="address-checkbox" checked="checked" />Lock Address</label>
+        <label><input type="checkbox" id="address-checkbox" checked="checked" />Lock Address Field</label>
 
     <!-- Hidden Fields for the Address Fields -->
 
