--- a/whats_fresh/whats_fresh_api/templates/product.html
+++ b/whats_fresh/whats_fresh_api/templates/product.html
@@ -76,10 +76,7 @@
         {% endif %}
     </div>
 
-    <div class="preparation" id="inline_preparation">  <!-- Div used if a new inline preparation -->
-        <select disabled class="preparation_select">
-        </select>
-        <a href="#" onclick="deletePreparation(this);return false;"><img class="delete" src="{% static 'delete.png' %}" /></a>
+    <div id="inline_preparation">  <!-- Div used if a new inline preparation submitted -->
     </div>
 
     <button type="submit" onclick="return popitup('/entry/products/new/preparations/new/')">Add New Preparation</button>
@@ -146,12 +143,17 @@
                 var prepName = data.name;
                 var prepId = data.id;
 
-                $('.container').append($('#inline_preparation'))
-                .append($('.preparation_select').append($("<option>").attr("value", prepId)
-                     .text(prepName)));
+              // $('#inline_preparation')
+              // .append($('<select disabled class="preparation_select">')
+              // .append($("<option>").attr("value", prepId)
+              // .text(prepName))).append('<a href="#" onclick="deletePreparation(this);return false;">\n<img class="delete" src="{% static 'delete.png' %}" /></a>');
 
-                $('.no_preparations').hide();
+        $('#inline_preparation').append($("<div>")
+        .append($('<select disabled class="preparation_select">')
+        .append($("<option>").attr("value", prepId)
+        .text(prepName))).append('<a href="#" onclick="deletePreparation(this);return false;">\n<img class="delete" src="{% static 'delete.png' %}" /></a>'));
 
+              $( ".no_preparations" ).hide();
 
             }
 
@@ -164,7 +166,7 @@
     {
         $( element ).parent().css("display", "none");
         if ($( ".preparation:visible" ).length === 0) {
-            $( ".no_products" ).show();
+            $( ".no_preparations" ).show();
         };
     }
 
