--- a/whats_fresh/whats_fresh_api/static/css/style.css
+++ b/whats_fresh/whats_fresh_api/static/css/style.css
@@ -247,7 +247,9 @@ a {
   height: 400px; }
 
 #address-checkbox {
-  margin-left: 250px; }
+  display: inline;
+  margin: 0px;
+  width: auto; }
 
 label {
   font-family: "Montserrat"; }
