--- a/whats_fresh/whats_fresh_api/static/css/style.scss
+++ b/whats_fresh/whats_fresh_api/static/css/style.scss
@@ -328,9 +328,9 @@ a{
 }
 
 #address-checkbox {
-  margin-left: 250px;
-  border: 1px solid #000;
-}
+  display: inline;
+  margin: 0px;
+  width: auto; }
 
 label {
   font-family: "Montserrat";
