--- a/whats_fresh/whats_fresh_api/static/css/style.scss
+++ b/whats_fresh/whats_fresh_api/static/css/style.scss
@@ -267,6 +267,8 @@ a{
     }
 
     .delete {
+        font-size: 2em;
+        padding-bottom: 5px;
         display: inline-block;
         vertical-align: middle;
     }
