--- a/whats_fresh/whats_fresh_api/templates/product.html
+++ b/whats_fresh/whats_fresh_api/templates/product.html
@@ -66,6 +66,7 @@
         {% if existing_preparations %}
         {% for prep in existing_preparations %}
         <div class="preparation">
+            <a href="#" onclick="deletePreparation(this);return false;"><i class="delete material-icons">delete</i></a>
             <select disabled id="existing{{ prep.id }}" class="preparation_select">
                 <option value="{{ prep.id }}">{{ prep.name }}</option>
             </select>
@@ -98,7 +99,8 @@
             <option value="{{ preparation.id }}">{{ preparation.name }}</option>
             {% endfor %}
         </select>
-        <a href="#" onclick="deletePreparation(this);return false;"><img class="delete" src="{% static 'delete.png' %}" /></a>
+        <a href="#" onclick="deletePreparation(this);return false;">
+            <i class="delete material-icons">delete</i></a>
     </div>
 </div>
 
