--- a/whats_fresh/whats_fresh_api/static/css/style.scss
+++ b/whats_fresh/whats_fresh_api/static/css/style.scss
@@ -305,6 +305,18 @@ a{
     font-family: $sans;
 }
 
+.no_image {
+  font-size: 18pt;
+  color: #333;
+  font-family: "Montserrat", sans-serif;
+}
+
+.no_video {
+  font-size: 18pt;
+  color: #333;
+  font-family: "Montserrat", sans-serif;
+}
+
 #new_product, #new_preparation, #new_image, #new_video {
     display: none;
 }
