product$itertaion changed to product_select submitted product available in product_select

--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -91,9 +91,6 @@
             <input id="preparation_ids" name="preparation_ids" type="hidden" />
         </div>
 
-        <div id="inline_product">  <!-- Div used if a new inline product submitted -->
-        </div>
-
         <button type="submit" onclick="return popitup('/entry/vendors/new/products/new/')">Add New Product</button>
         <div id="dialog-form"></div>
 
@@ -103,13 +100,13 @@
 <!-- The template div used by appendProduct() -->
 <div id='new_product'>
     <div class='product'>
-        <select id="product$iteration" onchange="showPreparations($iteration)">
+        <select id="product_select" onchange="showPreparations(_select)">
             <option selected disabled></option>
             {% for product in product_list %}
             <option value="{{ product }}">{{ product }}</option>
             {% endfor %}
         </select>
-        <select disabled id="preparation$iteration" class="preparation">
+        <select disabled id="preparation_select" class="preparation">
             <option selected disabled></option>
         </select>
         <a href="#" onclick="deleteProduct(this);return false;">
@@ -165,38 +162,23 @@
                 var prodName = data.name;
                 var prodId = data.id;
 
+                preparation_options[prodName] = [];
+
                 for(i=0; i < data.preparations.length; i++) {
 
-                    if ( i == 0) {
-                    $('#inline_product').append($('<div class="popup_product">')
-                    .append($('<select disabled id="product$iteration">')
-                    .append($("<option>").attr("value", prodId)
-                    .text(prodName))).append($('<select class="preparation">')
-                    .append($('<option >').attr("value", data.preparations[i].id).text(data.preparations[i].name)))
-                    .append('<a href="#" onclick="deleteProduct(this);return false;">\n<img class="delete" src="{% static 'delete.png' %}" /></a>'));
-
-                    $("#product$iteration").show();
-                    $("#preparation").hide();
-
-                    }
-
-                    else {
-
-                    $('#inline_product').append($('<div class="popup_product">')
-                    .append($('<select disabled id="product$iteration">')
-                    .append($("<option>").attr("value", prodId)
-                    .text(prodName))).append($('<select class="preparation">')
-                    .append($('<option >').attr("value", data.preparations[i].id).text(data.preparations[i].name)))
-                    .append('<a href="#" onclick="deleteProduct(this);return false;">\n<img class="delete" src="{% static 'delete.png' %}" /></a>'));
-
-                    $("#product$iteration").hide();
-                    $("#preparation").hide();
-
-                    }
+                    preparation_options[prodName].push({name: data.preparations[i].name, value: data.preparations[i].id});
 
                 }
 
-                $( ".product" ).append($("<option>").attr("value", prodId).text(prodName));
+
+                $('#product_select').append($("<option>").attr("value", prodName).html(prodName));
+
+                appendProduct();
+
+                $("#product" + (number_of_products - 1) + "option").filter(function() {
+                    return $(this).text() == prodName;
+                }).prop('selected', true);
+
                 $( ".no_products" ).hide();
 
             }
@@ -211,7 +193,7 @@
     function deleteProduct(element)
     {
         $( element ).parent().css("display", "none");
-        if ($( ".preparation:visible" ).length === 0 && $( ".popup_product:visible" ).length === 0 ) {
+        if ($( ".preparation:visible" ).length === 0 && $( ".new_product:visible" ).length === 0 ) {
             $( ".no_products" ).show();
         };
     }
@@ -254,7 +236,7 @@
     {
         $( ".no_products" ).hide();
         var new_product_html = $('#new_product').html();
-        var new_product_html = new_product_html.split("$iteration").join(number_of_products);
+        var new_product_html = new_product_html.split("_select").join(number_of_products);
         $( ".container" ).append( new_product_html );
         number_of_products++;
     }
