--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -156,13 +156,11 @@
             headers: { 'X-CSRFToken': '{{ csrf_token }}' },
             success: function(data)
             {
-                try {
 
-                    $.parseJSON(data);
-                }
-
-                catch(e) {
-
+                if (data.constructor === "test".constructor) {     // checks if the data is a string
+                    $('html, body').animate({
+                        scrollTop: $("#dialog-form").offset().top
+                    }, 500);
                     $("#dialog-form").html(data);
                     return
                 }
